# Checkers

./: .gitignore  CMakeLists.txt  b1.txt  b2.txt  b3.txt  w1.txt  w2.txt  w3.txt
include/: Board.h  CheckersWindow.h  Game.h  Piece.h  Player.h
src/: Board.cpp  CheckersWindow.cpp  Game.cpp  Piece.cpp  Player.cpp  main.cpp
src/Graph_lib/: fltk.h
